syntax = "proto3";

import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";

option csharp_namespace = "UploadThingsGrpcService.ToDoProto";

package todoit;

service ToDoService {
	// Create
	rpc CreateToDo(CreateTodoRequest) returns (CreateTodoResponse) {
		option (google.api.http) = {
			post : "/v1/todo",
			body : "*"
		};
	}

	// Read Single
	rpc ReadToDo(ReadToDoRequest) returns (ReadToDoResponse) {
		option (google.api.http) = {
			patch : "/v1/todo/{id}",
			body : "*"
		};
	}

	// Read List
	rpc ListToDo(GetAllRequest) returns (GetAllResponse) {
		option (google.api.http) = {
			get : "/v1/todo"
		};
	}

	// Update
	rpc UpdateToDo(UpdateToDoRequest) returns (UpdateToDoResponse) {
		option (google.api.http) = {
			put : "/v1/todo",
			body : "*"
		};
	}

	// Delete
	rpc DeleteToDo(DeleteToDoRequest) returns (DeleteToDoResponse) {
		option (google.api.http) = {
			delete : "/v1/todo/{id}"
		};
	}

}

message CreateTodoRequest {
	string title = 1;
	string description = 2;
}
message CreateTodoResponse {
	int32 id = 1;
}

message ReadToDoRequest {
	int32 id = 1;
	google.protobuf.FieldMask data_that_needed = 2;
}
message ReadToDoResponse {
	int32 id = 1;
	string title = 2;
	string description = 3;
	string to_do_status = 4;
}

message GetAllRequest{}
message GetAllResponse{
	repeated ReadToDoResponse todo_data = 1;
}

message UpdateToDoRequest {
	int32 id = 1;
	string title = 2;
	string description = 3;
	string to_do_status = 4;
}
message UpdateToDoResponse {
	int32 id = 1;
}

message DeleteToDoRequest {
	int32 id = 1;
}
message DeleteToDoResponse {
	int32 id = 1;
}